--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "~3.4.0",
     "gulp-uglify": "~0.1.0",
     "gulp-csso": "~0.1.8",
-    "gulp-less": "~1.1.10"
+    "gulp-less": "~1.1.10",
+    "gulp-concat": "~2.1.7"
   }
 }
